--- a/Areas/Admin/Views/About/Add.cshtml
+++ b/Areas/Admin/Views/About/Add.cshtml
@@ -1,1 +1,2 @@
-<!-- This is were you add info about yourself -->
+<!-- This is were the teammembers add info about themselves -->
+<!-- Admin = As in everybody in our team group -->
