'Started' and 'Completed' buttons only appear when needed, added to about page

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,3 +1,12 @@
-﻿<h2>Reading & Us</h2>
+﻿<h1>Reading & Us</h1>
 Each of us has spent a lot of time reading in our lives.
 This tool serves to list and track past, current, and future reading endeavors.
+
+<h2 class="mt-3">Paul Provan</h2>
+I have been a big fan of reading my whole life, but unfortunately havn't had as much time to endulge lately.
+Growing up I was engrossed in the Harry Potter series, much like everyone else my age.
+I have also been a fan of mystery novels, such as Murder on the Orient Express.
+
+<h2 class="mt-3">Riley Sester</h2>
+
+<h2 class="mt-3">Hilbert Perez</h2>
