--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -45,27 +45,35 @@
                     <td>@book.StartDate?.ToShortDateString()</td>
                     <td>@book.CompleteDate?.ToShortDateString()</td>
                     <td>
-                        <form asp-action="Edit" method="post" 
-                              asp-route-id="@Model.Filters.FilterString" 
+                        <form asp-action="Edit" method="post"
+                              asp-route-id="@Model.Filters.FilterString"
                               class="mr-2">
 
-                            <input type="hidden" 
-                               name="@nameof(Book.Id)" value="@book.Id" />
+                            <input type="hidden"
+                                   name="@nameof(Book.Id)" value="@book.Id" />
+
+                            @if (book.StartDate == null)
+                            {
+                                <button type="submit"
+                                        name="action" value="start"
+                                        class="btn btn-primary btn-sm">
+                                    Started
+                                </button>
+                            }
+
+                            @if (book.CompleteDate == null)
+                            {
+                                <button type="submit"
+                                        name="action" value="complete"
+                                        class="btn btn-primary btn-sm">
+                                    Completed
+                                </button>
+                            }
 
                             <button type="submit"
-                                name="action" value="start"
-                                class="btn btn-primary btn-sm">
-                                Started
-                            </button>
-
-                            <button type="submit" 
-                                name="action" value="complete"
-                                class="btn btn-primary btn-sm">Completed
-                            </button>
-                            
-                            <button type="submit"
-                                name="action" value="delete"
-                                class="btn btn-primary btn-sm">Delete
+                                    name="action" value="delete"
+                                    class="btn btn-primary btn-sm">
+                                Delete
                             </button>
                         </form>
                     </td>
