--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -3,12 +3,9 @@
 Each of us has spent a lot of time reading in our lives.
 This tool serves to list and track past, current, and future reading endeavors.
 This tool serves to list and track past, current, and future reading endeavors.
-
-<h2 class="mt-3">Paul Provan</h2>
-I have been a big fan of reading my whole life, but unfortunately havn't had as much time to endulge lately.
-Growing up I was engrossed in the Harry Potter series, much like everyone else my age.
-I have also been a fan of mystery novels, such as Murder on the Orient Express.
-
-<h2 class="mt-3">Riley Sester</h2>
-
-<h2 class="mt-3">Hilbert Perez</h2>
+<br>
+<br>
+<h1>Our Team</h1>
+<a class="link active" asp-area="" asp-controller="Home" asp-action="PP"><h2 class="mt-3">Paul Provan</h2></a>
+<a class="link active" asp-area="" asp-controller="Home" asp-action="HP"><h2 class="mt-3">Hilbert Perez</h2></a>
+<a class="link active" asp-area="" asp-controller="Home" asp-action="RS"><h2 class="mt-3">Riley Sester</h2></a>
