--- a/Views/Home/RS.cshtml
+++ b/Views/Home/RS.cshtml
@@ -1,1 +1,3 @@
 <h2 class="mt-3">Riley Sester</h2>
+I don't read that often, but I have looked into a book about music theory called "The Everything Music Theory Book" by Marc Schonbrun.
+I'm not an avid reader, but whenever I do, I usually read books that follows my interests, things like video game history, programming, and music theory.
